@@ -40,6 +40,7 @@ private:
 	void repeat ();
 	void join ();
 	void find_missing ();
+	void properties ();
 	void remove ();
 	void maybe_found_missing (boost::weak_ptr<Job>, boost::weak_ptr<Content>, boost::weak_ptr<Content>);
 	
@@ -52,6 +53,7 @@ private:
 	wxMenuItem* _repeat;
 	wxMenuItem* _join;
 	wxMenuItem* _find_missing;
+	wxMenuItem* _properties;
 	wxMenuItem* _remove;
 
 	boost::signals2::scoped_connection _job_connection;
